# prometheus-cloudwatch-federator-rs

./: Cargo.toml  README.md
src/: main.rs
