[package]
name = "prometheus-cloudwatch-federator-rs"
version = "0.1.0"
authors = ["Ryota Yoshikawa <yoshikawa@rrreeeyyy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
rusoto_core = "0.45.0"
rusoto_cloudwatch = "0.45.0"
prometheus-parse = { git = "https://github.com/ccakes/prometheus-parse-rs" }
